// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayNavigationBar should render a navigatiom bar with classes 1`] = `
<nav class="navbar navbar-collapse-absolute navbar-expand-md navbar-underline navigation-bar navigation-bar-light my-custom-class">
  <div class="container-fluid container-fluid-max-xl">
    <a aria-expanded="false" aria-label="toggle-navigation" class=" navbar-toggler navbar-toggler-link collapsed" href="#">
      <svg class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after" focusable="false" role="presentation">
        <use xlink:href="icons.svg#caret-bottom"></use>
      </svg>
    </a>
    <div class="navbar-collapse collapse" ref="content">
      <div class="container-fluid container-fluid-max-xl">
        <ul class="navbar-nav">
          <li class="nav-item" data-nav-item-index="0">
            <a class=" nav-link" href="#1">
              <span class="navbar-text-truncate">Page 1</span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</nav>
`;

exports[`ClayNavigationBar should render a navigatiom bar with id 1`] = `
<nav class="navbar navbar-collapse-absolute navbar-expand-md navbar-underline navigation-bar navigation-bar-light" id="myId">
  <div class="container-fluid container-fluid-max-xl">
    <a aria-expanded="false" aria-label="toggle-navigation" class=" navbar-toggler navbar-toggler-link collapsed" href="#">
      <svg class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after" focusable="false" role="presentation">
        <use xlink:href="icons.svg#caret-bottom"></use>
      </svg>
    </a>
    <div class="navbar-collapse collapse" ref="content">
      <div class="container-fluid container-fluid-max-xl">
        <ul class="navbar-nav">
          <li class="nav-item" data-nav-item-index="0">
            <a class=" nav-link" href="#1">
              <span class="navbar-text-truncate">Page 1</span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</nav>
`;

exports[`ClayNavigationBar should render a navigatiom bar with more than one element 1`] = `
<nav class="navbar navbar-collapse-absolute navbar-expand-md navbar-underline navigation-bar navigation-bar-light">
  <div class="container-fluid container-fluid-max-xl">
    <a aria-expanded="false" aria-label="toggle-navigation" class=" navbar-toggler navbar-toggler-link collapsed" href="#">
      <svg class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after" focusable="false" role="presentation">
        <use xlink:href="icons.svg#caret-bottom"></use>
      </svg>
    </a>
    <div class="navbar-collapse collapse" ref="content">
      <div class="container-fluid container-fluid-max-xl">
        <ul class="navbar-nav">
          <li class="nav-item" data-nav-item-index="0">
            <a class=" nav-link" href="#1">
              <span class="navbar-text-truncate">Page 1</span>
            </a>
          </li>
          <li class="nav-item" data-nav-item-index="1">
            <a class=" nav-link" href="#2">
              <span class="navbar-text-truncate">Page 2</span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</nav>
`;

exports[`ClayNavigationBar should render a navigatiom bar with one active element 1`] = `
<nav class="navbar navbar-collapse-absolute navbar-expand-md navbar-underline navigation-bar navigation-bar-light">
  <div class="container-fluid container-fluid-max-xl">
    <a aria-expanded="false" aria-label="toggle-navigation" class=" navbar-toggler navbar-toggler-link collapsed" href="#">Page 1
      <svg class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after" focusable="false" role="presentation">
        <use xlink:href="icons.svg#caret-bottom"></use>
      </svg>
    </a>
    <div class="navbar-collapse collapse" ref="content">
      <div class="container-fluid container-fluid-max-xl">
        <ul class="navbar-nav">
          <li class="nav-item" data-nav-item-index="0">
            <a aria-label="current-page" class=" nav-link active" href="#1">
              <span class="navbar-text-truncate">Page 1</span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</nav>
`;

exports[`ClayNavigationBar should render a navigatiom bar with one element 1`] = `
<nav class="navbar navbar-collapse-absolute navbar-expand-md navbar-underline navigation-bar navigation-bar-light">
  <div class="container-fluid container-fluid-max-xl">
    <a aria-expanded="false" aria-label="toggle-navigation" class=" navbar-toggler navbar-toggler-link collapsed" href="#">
      <svg class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after" focusable="false" role="presentation">
        <use xlink:href="icons.svg#caret-bottom"></use>
      </svg>
    </a>
    <div class="navbar-collapse collapse" ref="content">
      <div class="container-fluid container-fluid-max-xl">
        <ul class="navbar-nav">
          <li class="nav-item" data-nav-item-index="0">
            <a class=" nav-link" href="#1">
              <span class="navbar-text-truncate">Page 1</span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</nav>
`;

exports[`ClayNavigationBar should render an inverted colored navigatiom bar with one element 1`] = `
<nav class="navbar navbar-collapse-absolute navbar-expand-md navbar-underline navigation-bar navigation-bar-secondary">
  <div class="container-fluid container-fluid-max-xl">
    <a aria-expanded="false" aria-label="toggle-navigation" class=" navbar-toggler navbar-toggler-link collapsed" href="#">
      <svg class="lexicon-icon lexicon-icon-caret-bottom inline-item inline-item-after" focusable="false" role="presentation">
        <use xlink:href="icons.svg#caret-bottom"></use>
      </svg>
    </a>
    <div class="navbar-collapse collapse" ref="content">
      <div class="container-fluid container-fluid-max-xl">
        <ul class="navbar-nav">
          <li class="nav-item" data-nav-item-index="0">
            <a class=" nav-link" href="#1">
              <span class="navbar-text-truncate">Page 1</span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</nav>
`;
